[tool.poetry]
name = "klab"
version = "0.0.173"
description = "kLab website"
authors = ["Nyaruka <code@nyaruka.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^2.0.0"
smartmin = "2.1.2"
Pillow = "^9.0.1"
django-compressor = "2.2"
django-appconf = "1.0.2"
django-guardian = "1.5.1"
django-storages = "1.9.1"
boto3 = "1.17.27"
requests = "2.24.0"
celery = "^5.2.2"
mysqlclient = "2.0.1"
nose = "1.3.7"
raven = "6.10.0"
Markdown = "3.2.2"
pytz = "2020.1"
gunicorn = "20.0.4"
sorl-thumbnail = "12.6.3"
django-debug-toolbar = "^2.2.0"
coverage = "5.2.1"
flickrapi = "2.4.0"
django-nose = "1.4.6"
django-quickblocks = { git = "https://github.com/nyaruka/django-quickblocks.git", branch = "to_django_1_11"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
